--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=spaceships
+
 logging.level.org.hibernate.SQL=debug
+
+springdoc.api-docs.enabled=true
+
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/doc/swagger-ui.html
